Close logout greeter if it lost or failed to gain focus

It is shown on top of everything so switching focus to some other window underneath it doesn't make sense,
and it makes it non-functional with keyboard navigation since in some situation it's not possible to return focus to it
(it doesn't show in window switcher so you can't alt-tab back to it).

Ideally it shouldn't be possible to switch focus from it but that would require changes to KWin.

BUG: 511258